--- a/bundesland.css
+++ b/bundesland.css
@@ -3,18 +3,24 @@ body {
   margin: 0;
   padding: 0;
   background: #fff; }
-
-h1 {
-  padding: 10px 20px 7px 20px;
-  margin: 0;
-  color: #666;
-  background: #ddd;
-  text-transform: uppercase; }
-
-ul {
-  list-style: none;
-  margin: 0;
-  padding: 0; }
+  body h1 {
+    padding: 10px 20px 7px 20px;
+    margin: 0;
+    color: #666;
+    background: #ddd;
+    text-transform: uppercase; }
+  body .content {
+    margin: auto;
+    max-width: 1024px; }
+    body .content .header {
+      margin-bottom: 10px; }
+    body .content #states .state-container-wrapper {
+      width: 33%;
+      background-color: #eeeeee;
+      padding: 10px; }
+      body .content #states .state-container-wrapper .state-container {
+        background-color: white;
+        padding: 10px; }
 
 ul#persons li {
   text-transform: uppercase;
