--- a/src/sass/bundesland.scss
+++ b/src/sass/bundesland.scss
@@ -48,32 +48,65 @@ body {
 
     .header {
       margin-bottom: 10px;
+      margin-right: 5px;
+      margin-left: 5px;
     }
 
     #states {
 
       .state-container-wrapper {
-        width: 33%;
-        background-color: $bundesland-box-color;
-        padding: 10px;
+        width: 1/3*100%;
+        float: left;
 
-        @include respond-to(handhelds) {
+        @include respond-to(small-screen) {
           width: 100%;
         }
-        @include respond-to(medium-screens) {
+        @include respond-to(medium-screen) {
           width: 50%;
         }
 
-        .state-container {
-          background-color: white;
+        .state-container-border {
+          background-color: $bundesland-box-color;
+          margin: 5px;
           padding: 10px;
+
+          .state-container {
+            background-color: white;
+            padding: 10px;
+
+            .state-name {
+              white-space: nowrap;
+              overflow: hidden;
+            }
+
+            .school-count {
+              color: #AAAAAA;
+              font-size: 14px;
+              margin-top: 3px;
+            }
+          }
         }
       }
     }
-  }
-}
 
-ul#persons li {
-  text-transform: uppercase;
-  background-color: #ddd;
+    #persons {
+      $box-size: 30px;
+
+      clear: both;
+
+      person {
+        background-color: $header-color;
+        margin-left: 5px;
+        margin-bottom: 5px;
+        width: $box-size;
+        height: $box-size;
+        float: left;
+        text-transform: uppercase;
+        text-align: center;
+        vertical-align: middle;
+        line-height: $box-size;
+      }
+    }
+
+  }
 }
